# siriscore

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
scorer/: __init__.py  labels.py  lookup.py  parser.py  report.py  rpc.py  utils.py
scorer/heuristics/: __init__.py  h10_coinjoin_tx.py  h11_payjoin_opportunity.py  h14_rbf_signalling.py  h15_fee_rate.py  h1_script_mismatch.py  h3_address_reuse.py  h4_utxo_age.py  h8_tainted_label.py  h9_coinjoin_input.py
siriscore/: __init__.py
tests/: test_api.py  test_checks.py  test_cli.py  test_heuristics.py  test_labels.py  test_lookup.py  test_parser.py  test_rpc.py
tools/: gen_golden_vectors.py
utxo_privacy_scorer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
web/: app.js  index.html  robots.txt  sitemap.xml  style.css
