[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utxo-privacy-scorer"
version = "0.1.0"
description = "Pre-broadcast Bitcoin transaction privacy scorer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "python-bitcoinlib>=0.12",
    "requests>=2.28",
    "rich>=13.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "httpx"]

[project.scripts]
btc-privacy-check = "cli:main"

[tool.setuptools]
packages = ["scorer", "scorer.heuristics", "api"]
py-modules = ["cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
